--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,12 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'My profile', user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
+                <li>
+                  <%= link_to likes_user_path(current_user) do %>
+                    Likes <span class="badge"><%= @count_likes %></span>
+                  <% end %>
+                </li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to 'Logout', logout_path, method: :delete %></li>
               </ul>
           <% else %>
