--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -16,6 +16,15 @@
             <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-xs' %>
           <% end %>
         </div>
+        <div>
+          <% if current_user.liked_microposts.include?(micropost) %>
+            <!-- いいねされているのであれば、 -->
+            <%= link_to "Unlike", like_path(Like.find_by(user: current_user, micropost: micropost), micropost_id: micropost.id), method: :delete, class: 'btn btn-danger btn-xs' %>
+          <% else %>
+            <!-- いいねされてないのであれば、 -->
+            <%= link_to "Like", likes_path(micropost_id: micropost.id), method: :post, class: 'btn btn-primary btn-xs' %>
+          <% end %>
+        </div>
       </div>
     </li>
   <% end %>
